# SimpleGRpc

./: .gitignore  CMakeLists.txt  simpleGRpcClient.cpp  simpleGRpcServer.cpp
cpp/: CMakeLists.txt
cpp/mediaServer/: CMakeLists.txt
cpp/remuxing/: CMakeLists.txt
js/: SimpleGRpcClient.js  WebDownLoader.js  package-lock.json  package.json
protos/: simple_proto.proto  ytube_dl_proto.proto
python/: download_youtube.py  run_codegen.py  simpleGRpcServer.py  simple_proto_pb2.py  simple_proto_pb2_grpc.py  ytube_dl_proto_pb2.py  ytube_dl_proto_pb2_grpc.py
